lib/src/compiler/tests/testdata/errors/45.out
error: no matching patterns
   ╭─[line:3:12]
   │
 3 │     all of them
   │            ──┬─  
   │              ╰─── there's no pattern in this set
   │ 
   │ Note: this rule doesn't define any patterns
───╯
